# bond

./: Cargo.toml  Config.yml  Dockerfile  README.md  bond.yml
.github/: dependabot.yml
.github/workflows/: build.yml
.playground/.cr/: Cargo.toml
.playground/.cr/src/: main.rs
.playground/.crd/: Cargo.toml
.playground/.crd/src/: main.rs
src/: client.rs  client.rs.bak  crd.rs  main.rs  main.rs.bak
src/bb/src/: main.rs
