[package]
name = "bond"
version = "0.1.1"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = { version = "3.0.0-beta.2" }
futures = "0.3.13"
json_env_logger = { version = "0.1.1", features = ["iso-timestamps"] }
k8s-openapi = { version = "0.11.0", features = ["v1_20"], default-features = false }
kube = { version = "0.50.1", features = ["derive"] }
kube-runtime = { version = "0.50.1", default-features = false }
log = ">=0.4.13, <0.4.14" # restricted because json_env_logger compile failes with newer versions
schemars = "^0.8.0"
serde = "1.0.123"
serde_json = "^1.0.62"
tokio = { version = "1.2.0", features = ["full"] }
warp = "0.3.0"
