[package]
name = "bc"
version = "0.1.0"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.38"
env_logger = "^0.8.2"
futures = "^0.3.12"
k8s-openapi = { version = "^0.11.0", features = ["v1_20"], default-features = false }
kube = { version = "^0.48.0", features = ["derive"] }
kube-runtime = { version = "^0.48.0", default-features = false }
log = "^0.4.14"
schemars = "^0.8.0"
serde = { version = "^1.0.123", features = ["derive"] }
serde_json = "^1.0.62"
tokio = { version = "^1.2.0", features = ["full"] }
